master footer layout & design

--- a/css/styles.css
+++ b/css/styles.css
@@ -664,7 +664,8 @@ input[type="button"].btn-block {
 
 .btn-text {
   color: #00A2E1;
-  padding: 0; }
+  padding: 0;
+  white-space: normal; }
 
 .media-wrap {
   position: relative;
@@ -693,21 +694,182 @@ input[type="button"].btn-block {
     height: 100%;
     width: 100%; }
 
-.media-item.float-l {
-  margin: .5rem 2.5rem 2.5rem 0; }
+.media-item {
+  margin: 0 auto 2rem; }
+  .media-item figcaption {
+    padding-top: .625em;
+    padding-left: .625em; }
+  @media (min-width: 48em) {
+    .media-item.float-l {
+      margin: .5rem 2.5rem 2.5rem 0; }
+    .media-item.float-r {
+      margin: .5rem 0 2.5rem 2.5rem; }
+    .media-item.mask-outside.float-l {
+      margin: 2rem 2.5rem 2.5rem 0; }
+    .media-item.mask-outside.float-r {
+      margin: .5rem 0 2.5rem 2.5rem; } }
 
-.media-item.float-r {
-  margin: .5rem 0 2.5rem 2.5rem; }
+.form-trans {
+  border-radius: 3em;
+  border: .15em solid currentColor; }
+  .form-trans .icon {
+    fill: currentColor; }
+  .form-trans input,
+  .form-trans button {
+    background: transparent;
+    border-radius: 3em;
+    border: none;
+    color: currentColor;
+    box-shadow: none;
+    height: auto;
+    margin: 0; }
+  .form-trans button {
+    padding-left: 0; }
 
-.media-item.mask-outside.float-l {
-  margin: 2rem 2.5rem 2.5rem 0; }
+.form-base input,
+.form-base label {
+  background-color: transparent;
+  border-bottom: 1px solid currentColor;
+  box-shadow: none; }
+  .form-base input.clean,
+  .form-base label.clean {
+    border: none; }
 
-.media-item.mask-outside.float-r {
-  margin: .5rem 0 2.5rem 2.5rem; }
+.form-base textarea {
+  border: 1px solid currentColor; }
 
-.media-item figcaption {
+.form-base input {
+  font-size: 1.125rem; }
+
+.form-base label {
+  font-size: .9rem;
+  font-weight: 400;
+  margin-bottom: 0;
+  padding-top: .313em;
+  padding-right: 1em;
+  padding-bottom: .313em;
+  padding-left: 0; }
+
+.form-base .checkbox,
+.form-base .radio {
+  margin-top: 0;
+  margin-bottom: 0; }
+  .form-base .checkbox label,
+  .form-base .radio label {
+    border: none;
+    margin-bottom: 0; }
+  .form-base .checkbox input,
+  .form-base .radio input {
+    position: initial;
+    margin-top: 0;
+    margin-right: .625rem;
+    margin-bottom: 0;
+    margin-left: 0;
+    width: initial; }
+
+.form-base .radio-inline {
+  display: flex;
+  align-items: center;
+  margin-left: 1rem; }
+  .form-base .radio-inline + .form-base .radio-inline.radio-inline {
+    margin-left: 1rem; }
+
+.form-base .radio-group {
+  display: flex;
+  align-items: center; }
+  .form-base .radio-group > * {
+    padding-right: 1em; }
+
+.form-base abbr[data-original-title], .form-base abbr[title] {
+  border-bottom: none;
+  text-decoration: none; }
+
+.form-base .flex-3-col > * {
+  flex-grow: 0;
+  padding-right: 1em;
+  padding-left: 1em; }
+
+.form-base .form-group-btn {
+  margin-bottom: 0;
+  padding-top: .625em; }
+
+.form-row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -.25em;
+  margin-left: -.25em;
+  align-items: center; }
+  .form-row > * {
+    padding: 0 .25em .5em; }
+  .form-row > * {
+    display: flex;
+    align-items: flex-end;
+    flex-grow: 1;
+    padding-right: 1em;
+    padding-left: 1em;
+    padding-bottom: 0;
+    flex-basis: 50%; }
+    .form-row > * .form-control {
+      flex-grow: 1; }
+    .form-row > * select.form-control {
+      flex-grow: 0; }
+  .form-row > .btn {
+    flex-grow: initial;
+    flex-basis: initial;
+    padding: .35em .75em .5em; }
+  .form-row-button {
+    margin-bottom: 2rem; }
+    .form-row-button .help-block {
+      margin-bottom: 0; }
+  .form-row.helper-text {
+    align-items: flex-start;
+    padding-top: 1em; }
+    .form-row.helper-text > * {
+      flex-basis: 50%; }
+      .form-row.helper-text > *:nth-child(2) {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start; }
+
+.form-group {
+  margin-bottom: 1rem; }
+  .form-group-block {
+    align-items: flex-start;
+    flex-direction: column;
+    flex-basis: auto; }
+    .form-group-block label {
+      display: block;
+      border: none;
+      font-size: .9rem;
+      font-weight: iniital;
+      margin-bottom: .625rem;
+      padding-top: 0;
+      padding-right: 0;
+      padding-bottom: 0;
+      padding-left: 0; }
+  .form-group-table {
+    display: block; }
+    .form-group-table > * {
+      display: block; }
+  .form-group-inline {
+    flex-direction: row;
+    flex-grow: 0;
+    flex-basis: auto; }
+    .form-group-inline > * {
+      display: flex;
+      align-items: center; }
+    .form-group-inline input {
+      flex-grow: 0;
+      width: auto; }
+
+.form-heading-title {
+  margin-bottom: .625rem;
   padding-top: .625em;
-  padding-left: .625em; }
+  padding-right: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+  flex-basis: initial;
+  width: 100%; }
 
 .navbar {
   text-align: left; }
@@ -884,53 +1046,67 @@ input[type="button"].btn-block {
   opacity: 0; }
 
 .site-footer {
-  padding-top: 2em;
-  padding-bottom: 2em;
-  text-align: center;
+  padding-top: calc(1vw + 2em);
   background-color: #111;
   color: #FCFCFC; }
+  .site-footer > .container {
+    padding: 2em; }
   .site-footer p, .site-footer nav {
     font-size: .875em; }
   @supports (grid-gap: 0) {
     .site-footer {
       grid-row: 4 / 4; } }
 
+.logo {
+  flex-grow: 1;
+  max-width: 15em; }
+
 .footer-nav {
-  padding-top: calc(1vw + 3em);
-  padding-bottom: calc(1vw + 3em); }
-  .footer-nav > *:not(:last-child) {
-    margin-bottom: 0; }
-  @media (min-width: 28.125em) {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: calc(1vw + 5em); }
+  .footer-nav nav {
+    flex-basis: 50%;
+    margin-bottom: 2rem; }
+  .footer-nav ul {
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-left: 0; }
+  .footer-nav li {
+    list-style-type: none; }
+  @media (min-width: 42em) {
     .footer-nav {
       display: flex;
       flex-wrap: wrap; }
+      .footer-nav nav {
+        flex-basis: 17%;
+        margin-bottom: 4rem; }
       .footer-nav > *:not(:last-child) {
-        margin-bottom: 0;
         padding-right: calc(1vw + 5em); } }
 
-.contact-nav {
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: space-between; }
-  .contact-nav > :first-child {
-    margin-bottom: .5rem; }
-  @media (min-width: 30em) {
-    .contact-nav > :first-child {
-      margin-bottom: 0;
-      margin-right: .75rem; } }
+.footer-contact {
+  font-size: .875em; }
+  .footer-contact .contact-info {
+    margin-bottom: 2rem; }
+  @media (min-width: 39em) {
+    .footer-contact > * {
+      flex-basis: 50%; }
+    .footer-contact .contact-info {
+      margin-bottom: 0; } }
 
 .footer-copyright {
   border: none; }
-  @media (min-width: 30em) {
-    .footer-copyright .soc-media-icons {
-      justify-content: flex-end; } }
+  @media (min-width: 42em) {
+    .footer-copyright {
+      text-align: right; }
+      .footer-copyright .soc-media-icons {
+        justify-content: flex-end; } }
 
 .page-content > .container {
   padding-top: 2em;
   padding-bottom: 2em;
-  padding-right: 4em;
-  padding-left: 4em; }
+  padding-right: 2em;
+  padding-left: 2em; }
   .page-content > .container > .btn {
     margin-top: 1rem;
     margin-bottom: 2rem; }
@@ -943,7 +1119,9 @@ input[type="button"].btn-block {
       padding-top: 0; }
     .page-content > .container {
       padding-top: 0;
-      padding-bottom: 0; } }
+      padding-bottom: 0;
+      padding-right: 4em;
+      padding-left: 4em; } }
 
 .MontserratLight {
   -webkit-font-smoothing: auto;
