--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,7 @@
 @import "elements/media-item";
 
 // Components
+@import "components/forms";
 @import "components/navigation/navigation";
 @import "components/navigation/breadcrumbs";
 @import "components/masthead";
