--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,5 +1,33 @@
 // form base styles
 
+@mixin form-trans {
+  border-radius: 3em;
+  border: .15em solid currentColor;
+  .icon {
+    fill: currentColor;
+  }
+  input,
+  button {
+    background: transparent;
+    border-radius: 3em;
+    border: none;
+    color: currentColor;
+    box-shadow: none;
+    height: auto;
+    margin: 0;
+  }
+  button {
+    // @include pr-tiny;
+    // @include pl-tiny;
+    // padding-right: 0;
+    padding-left: 0;
+  }
+}
+
+.form-trans {
+  @include form-trans;
+}
+
 .form {
   
   > *:not(:last-child) {
