--- a/css/styles.css
+++ b/css/styles.css
@@ -1053,21 +1053,26 @@ input[type="button"].btn-block {
     padding: 2em; }
   .site-footer p, .site-footer nav {
     font-size: .875em; }
+  .site-footer .logo {
+    flex-grow: 1;
+    flex-basis: 15em;
+    max-width: 15em;
+    margin-bottom: 2rem;
+    padding-right: 1em; }
+  .site-footer .search {
+    margin-bottom: 2rem; }
   @supports (grid-gap: 0) {
     .site-footer {
       grid-row: 4 / 4; } }
 
-.logo {
-  flex-grow: 1;
-  max-width: 15em; }
-
 .footer-nav {
   display: flex;
   flex-wrap: wrap;
-  padding-top: calc(1vw + 5em); }
+  padding-top: calc(1vw + 2em); }
   .footer-nav nav {
-    flex-basis: 50%;
     margin-bottom: 2rem; }
+    .footer-nav nav:not(:last-child) {
+      padding-right: calc(1vw + 5em); }
   .footer-nav ul {
     margin-bottom: 0;
     margin-left: 0;
@@ -1075,14 +1080,8 @@ input[type="button"].btn-block {
   .footer-nav li {
     list-style-type: none; }
   @media (min-width: 42em) {
-    .footer-nav {
-      display: flex;
-      flex-wrap: wrap; }
-      .footer-nav nav {
-        flex-basis: 17%;
-        margin-bottom: 4rem; }
-      .footer-nav > *:not(:last-child) {
-        padding-right: calc(1vw + 5em); } }
+    .footer-nav nav {
+      margin-bottom: 4rem; } }
 
 .footer-contact {
   font-size: .875em; }
