--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -7,24 +7,31 @@
   p, nav {
     @include text-sm;
   }
+  .logo {
+    flex-grow: 1;
+    flex-basis: 15em;
+    max-width: 15em;
+    @include mb-2;
+    @include pr-1;
+  }
+  .search {
+    @include mb-2;
+  }
   @supports (grid-gap: 0) {
     grid-row: 4 / 4;
   }
 }
 
-.logo {
-  flex-grow: 1;
-  max-width: 15em;
-}
-
 .footer-nav {
   @include flex;
   @include flex-wrap;
-  padding-top: $calc-5;
+  padding-top: $calc-2;
 
   nav {
-    flex-basis: 50%;
     @include mb-2;
+    &:not(:last-child) {
+      padding-right: calc(1vw + 5em);
+    }
   }
 
   ul {
@@ -40,14 +47,9 @@
 
   // 450
   @media (min-width: 42em) {
-    display: flex;
-    flex-wrap: wrap;
     nav {
-      flex-basis: 17%;
+      //flex-basis: 17%;
       @include mb-4;
-    }
-    > *:not(:last-child) {
-      padding-right: calc(1vw + 5em);
     }
   }
 }
