--- a/scss/utilities/modifiers/_mod-backgrounds.scss
+++ b/scss/utilities/modifiers/_mod-backgrounds.scss
@@ -34,3 +34,9 @@
 
 }
 
+.bg-half-globe-left {
+  @include bg-cover;
+  background-size: contain;
+  background-image: url(../images/bg/bg-banner-half-globe-darkgreen.png);
+}
+
