--- a/scss/utilities/modifiers/_mod-backgrounds.scss
+++ b/scss/utilities/modifiers/_mod-backgrounds.scss
@@ -36,7 +36,11 @@
 
 .bg-half-globe-left {
   @include bg-cover;
-  background-size: contain;
-  background-image: url(../images/bg/bg-banner-half-globe-darkgreen.png);
+  background-image: url(../images/bg/bg-banner-half-globe-darkgreen.jpg);
+}
+
+.bg-analytics {
+  @include bg-cover;
+  background-image: url(../images/bg/bg-analytics-darkblue.jpg);
 }
 
