--- a/partials/main-menu.html
+++ b/partials/main-menu.html
@@ -28,7 +28,8 @@
                 <a class="nav-link dropdown-toggle" href="analytics.html" id="analytics-dropdown" data-toggle="dropdown" aria-haspopup="true"
                   aria-expanded="false">Analytics</a>
                 <div class="dropdown-menu" aria-labelledby="analytics-dropdown">
-                  <a class="dropdown-item" href="analytics.html">Overview</a>                   <a class="dropdown-item" href="360-degree-view.html">360-Degree view of the Customer</a>
+                  <a class="dropdown-item" href="analytics.html">Overview</a>
+                  <a class="dropdown-item" href="360-degree-view.html">360-Degree view of the Customer</a>
                   <a class="dropdown-item" href="data-analysis.html">Big Data Analysis</a>
                   <a class="dropdown-item" href="real-time-analytics.html">Real-Time Analytics</a>
                   <a class="dropdown-item" href="sentiment-analysis.html">Sentiment Analysis</a>
