--- a/scss/theme/_colors.scss
+++ b/scss/theme/_colors.scss
@@ -42,7 +42,7 @@ $ca-purple-light: mix(white, $ca-purple, 35%);
 $ca-purple-dark: mix(black, $ca-purple, 25%);
 
 // red
-$ca-red: #A0AFD4;
+$ca-red: #EC4644;
 $ca-red-light: mix(white, $ca-red, 35%);
 $ca-red-dark: mix(black, $ca-red, 25%);
 
