--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -10,7 +10,8 @@
 
   &-row {
     .card-block {
-      @include p-4;
+      @include pt-pb-4;
+      @include pr-pl-3;
     }
     @media (min-width: $break-ml-phone) {
       @include flex-d-row;
