--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -13,6 +13,9 @@
       @include pt-pb-4;
       @include pr-pl-3;
     }
+    p:last-of-type {
+      @include mb-3;
+    }
     .btn {
       text-align: left;
     }
@@ -56,7 +59,12 @@
           }
         }
       }
-
+      @media (min-width: 70em) {
+        p:last-of-type {
+          @include mw-35em;
+          margin-bottom: 5rem;
+        }
+      }
       @media (min-width: 100em) {
 
         .media-item {
